--- a/fimco/fimcosite/templates/registration.html
+++ b/fimco/fimcosite/templates/registration.html
@@ -236,6 +236,8 @@
                                     {% endif %}
                                     {% if wizard.steps.current == wizard.steps.last %}
                                         <input type="submit" class="btn btn-primary btn-teal float-right" value="REGISTER"/>
+                                    {% else %}
+                                        <input type="submit" class="btn btn-primary btn-teal float-right" value="NEXT"/>
                                     {% endif %}
                                 </div>
                             </div>
