--- a/fimco/pochi/templates/pochi/earnings.html
+++ b/fimco/pochi/templates/pochi/earnings.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/dt-1.10.16/r-2.2.1/sc-1.4.3/datatables.min.css"/>
     <link href="/static/pochi/css/navyblue.css" rel="stylesheet" type="text/css" />
 {% endblock %}
+{% load get_second %}
 {% block content %}
     <section id="middle">
         <div id="content" class="dashboard padding-20">
@@ -31,7 +32,7 @@
                         <div class="panel-heading">
                             <span class="title elipsis">
                                 {% if page == 'rates' %}
-                                    <strong>POCHI Rates</strong>
+                                    <strong>Current POCHI Rates</strong>
                                 {% elif page == 'daily' %}
                                     <strong>Daily Earnings</strong>
                                 {% elif page == 'monthly' %}
@@ -44,28 +45,48 @@
                         <div class="panel-body">
                             <div class="table-responsive">
                                 <div class="row">
-                                    <form method="get">
-                                        <div class="col-lg-6 col-md-5 col-sm-5">
+                                    <div class="col-lg-6 col-md-5 col-sm-5">
+                                        <form method="get">
                                             <label>
-                                                <input type="text"
+                                                {% if page == 'daily' %}
+                                                    <input type="text"
                                                        class="form-control rangepicker"
                                                        name="{{ page }}_range"
-                                                       value=""
+                                                       value="{{ last_month|date:'m/d/Y' }} - {% now 'm/d/Y' %}"
                                                        data-format="yyyy-mm-dd"
-                                                       data-from="2018-01-01"
-                                                       data-to="2018-12-31">
+                                                       data-from="{{ last_month|date:'Y-m-d' }}"
+                                                       data-to="{% now 'Y-m-d' %}">
+                                                {% else %}
+                                                    <input type="text"
+                                                       class="form-control rangepicker"
+                                                       name="{{ page }}_range"
+                                                       data-format="yyyy-mm-dd"
+                                                       value="{{ last_year|date:'m/d/Y' }} - {% now 'm/d/Y' %}"
+                                                       data-from="{{ last_year|date:'m/d/Y' }}"
+                                                       data-to="{% now 'm/d/Y' %}">
+                                                {% endif %}
                                             </label>
                                             <input type="hidden" name="interest" value="{{ page }}">
                                             <input type="submit" class="btn btn-primary" value="GO">
-                                        </div>
-                                    </form>
+                                        </form>
+                                    </div>
+                                    <div class="col-lg-6 col-md-5 col-sm-5">
+                                        <p class="float-right">
+                                            {% if page == 'monthly' %}
+                                                Month to-date earnings as at {% now "dS F" %} is
+                                                <span class="font-lato size-20 weight-800">
+                                                    TZS {{ month|default:0 }}/=
+                                                </span>
+                                            {% endif %}
+                                        </p>
+                                    </div>
                                 </div>
                                 <table id="earningsTable" class="table table-vertical-middle nomargin">
                                     <thead>
                                         <tr>
                                             {% if page == 'rates' %}
                                                 <th>Month</th>
-                                                <th>Rate</th>
+                                                <th>Rate(%)</th>
                                             {% elif page == 'daily' %}
                                                 <th>Date</th>
                                                 <th>Earnings</th>
@@ -73,8 +94,7 @@
                                                 <th>Date</th>
                                                 <th>Earnings</th>
                                             {% elif page == 'total' %}
-                                                <th>Date</th>
-                                                <th>Total</th>
+                                                <th>Period</th>
                                                 <th>Cumulative</th>
                                             {% endif %}
                                         </tr>
@@ -83,7 +103,7 @@
                                         {% if page == 'rates' %}
                                             {% for rate in rates %}
                                             <tr>
-                                                <td>{{ rate.full_timestamp|date:'M Y' }}</td>
+                                                <td>{{ rate.full_timestamp|date:'d M Y' }}</td>
                                                 <td>{{ rate.rate }}</td>
                                             </tr>
                                             {% endfor %}
@@ -190,7 +210,7 @@
             type: 'line',
             data: {
                 {% if page == 'rates' %}
-                    labels: [{% for rate in rates %}'{{rate.full_timestamp|date:'d/m/Y'}}',{% endfor %}],
+                    labels: [{% for rate in rates %}'{{rate.full_timestamp|date:'M Y'}}',{% endfor %}],
                 {% elif page == 'daily' %}
                     labels: [{% for bonus in bonuses %}'{{bonus.full_timestamp|date:'d/M'}}',{% endfor %}],
                 {% elif page == 'monthly' %}
