--- a/fimco/pochi/static/pochi/css/essentials.css
+++ b/fimco/pochi/static/pochi/css/essentials.css
@@ -7347,10 +7347,10 @@ div.alert.bordered-top p {
 }
 .toast-message a,
 .toast-message label {
-  color: #ffffff;
+  color: #FFFFFF;
 }
 .toast-message a:hover {
-  color: #cccccc;
+  color: #CCCCCC;
   text-decoration: none;
 }
 .toast-close-button {
@@ -7360,10 +7360,13 @@ div.alert.bordered-top p {
   float: right;
   font-size: 20px;
   font-weight: bold;
-  color: #ffffff;
+  color: #FFFFFF;
+  -webkit-text-shadow: 0 1px 0 #ffffff;
+  text-shadow: 0 1px 0 #ffffff;
   opacity: 0.8;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
   filter: alpha(opacity=80);
+  line-height: 1;
 }
 .toast-close-button:hover,
 .toast-close-button:focus {
@@ -7373,6 +7376,11 @@ div.alert.bordered-top p {
   opacity: 0.4;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
   filter: alpha(opacity=40);
+}
+.rtl .toast-close-button {
+  left: -0.3em;
+  float: left;
+  right: 0.3em;
 }
 /*Additional properties for button version
  iOS requires the button element instead of an anchor tag.
@@ -7385,7 +7393,7 @@ button.toast-close-button {
   -webkit-appearance: none;
 }
 .toast-top-center {
-  top: 0;
+  top: 40%;
   right: 0;
   width: 100%;
 }
@@ -7423,8 +7431,8 @@ button.toast-close-button {
 #toast-container {
   position: fixed;
   z-index: 999999;
+  pointer-events: none;
   /*overrides*/
-
 }
 #toast-container * {
   -moz-box-sizing: border-box;
@@ -7433,6 +7441,7 @@ button.toast-close-button {
 }
 #toast-container > div {
   position: relative;
+  pointer-events: auto;
   overflow: hidden;
   margin: 0 0 6px;
   padding: 15px 15px 15px 50px;
@@ -7442,12 +7451,23 @@ button.toast-close-button {
   border-radius: 3px 3px 3px 3px;
   background-position: 15px center;
   background-repeat: no-repeat;
-  color: #ffffff;
+  -moz-box-shadow: 0 0 12px #999999;
+  -webkit-box-shadow: 0 0 12px #999999;
+  box-shadow: 0 0 12px #999999;
+  color: #FFFFFF;
   opacity: 0.8;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
   filter: alpha(opacity=80);
 }
-#toast-container > :hover {
+#toast-container > div.rtl {
+  direction: rtl;
+  padding: 15px 50px 15px 15px;
+  background-position: right 15px center;
+}
+#toast-container > div:hover {
+  -moz-box-shadow: 0 0 12px #000000;
+  -webkit-box-shadow: 0 0 12px #000000;
+  box-shadow: 0 0 12px #000000;
   opacity: 1;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   filter: alpha(opacity=100);
@@ -7468,40 +7488,35 @@ button.toast-close-button {
 #toast-container.toast-top-center > div,
 #toast-container.toast-bottom-center > div {
   width: 300px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 #toast-container.toast-top-full-width > div,
 #toast-container.toast-bottom-full-width > div {
   width: 96%;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 .toast {
   background-color: #030303;
 }
-#toast-container .toast-primary {
-	padding:15px;
-}
-.toast-primary {
-  border:0;
-  background-color: #333;
-}
 .toast-success {
-  background-color: #51a351;
+  background-color: #51A351;
 }
 .toast-error {
-  background-color: #bd362f;
+  background-color: #BD362F;
 }
 .toast-info {
-  background-color: #2f96b4;
+  background-color: #2F96B4;
 }
 .toast-warning {
-  background-color: #f89406;
+  background-color: #F89406;
 }
 .toast-progress {
   position: absolute;
   left: 0;
   bottom: 0;
-  height: 2px;
+  height: 4px;
   background-color: #000000;
   opacity: 0.4;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
@@ -7513,9 +7528,16 @@ button.toast-close-button {
     padding: 8px 8px 8px 50px;
     width: 11em;
   }
+  #toast-container > div.rtl {
+    padding: 8px 50px 8px 8px;
+  }
   #toast-container .toast-close-button {
     right: -0.2em;
     top: -0.2em;
+  }
+  #toast-container .rtl .toast-close-button {
+    left: -0.2em;
+    right: 0.2em;
   }
 }
 @media all and (min-width: 241px) and (max-width: 480px) {
@@ -7523,9 +7545,16 @@ button.toast-close-button {
     padding: 8px 8px 8px 50px;
     width: 18em;
   }
+  #toast-container > div.rtl {
+    padding: 8px 50px 8px 8px;
+  }
   #toast-container .toast-close-button {
     right: -0.2em;
     top: -0.2em;
+  }
+  #toast-container .rtl .toast-close-button {
+    left: -0.2em;
+    right: 0.2em;
   }
 }
 @media all and (min-width: 481px) and (max-width: 768px) {
@@ -7533,8 +7562,10 @@ button.toast-close-button {
     padding: 15px 15px 15px 50px;
     width: 25em;
   }
+  #toast-container > div.rtl {
+    padding: 15px 50px 15px 15px;
+  }
 }
-	
 
 
 
